# hs_test_scripts

./: .gitignore
cpu_stress_pro/: .gitignore  README.md  config.json  monitor.py  requirements.txt  run.bat  temperature_monitor.py
cpu_stress_pro/src/: config_loader.py  connection_manager.py  logger_manager.py  stress_monitor.py
groovy/: README.md  jenkins_monitor_script.groovy
leisai_test/: README.md  parameter_manager.py  pr_cli.py  pr_cycle_test.py  quick_test.py  test_all.py  test_framework.py  test_pr_fix.py
leisai_test/leisai_l7_driver/: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  setup.py  快速使用指南.md  项目说明.md
leisai_test/leisai_l7_driver/docs/: leisai_doc.txt
leisai_test/leisai_l7_driver/examples/: basic_usage.py
leisai_test/leisai_l7_driver/leisai/: __init__.py  py.typed
leisai_test/leisai_l7_driver/leisai/core/: __init__.py  constants.py  driver.py  exceptions.py  monitor.py  motion.py  parameters.py
leisai_test/leisai_l7_driver/leisai/protocols/: __init__.py  modbus.py  serial.py
leisai_test/leisai_l7_driver/tests/: __init__.py  test_modbus.py
